--- a/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
+++ b/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
@@ -1,12 +1,6 @@
-﻿@model IEnumerable<StarWarsDataAnalyzerWeb.Services.SwapiService.Planet>
+﻿@model IEnumerable<StarWarsDataAnalyzerWeb.ViewModels.PlanetViewModel>
 
-@{
-    ViewData["Title"] = "Planets";
-}
-
-<h1>Planets</h1>
-
-<table class="table">
+<table>
     <thead>
         <tr>
             <th>Name</th>
@@ -16,13 +10,22 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var planet in Model)
+        @if (Model != null && Model.Any())
+        {
+            foreach (var planet in Model)
+            {
+                <tr>
+                    <td>@planet.Name</td>
+                    <td>@planet.Climate</td>
+                    <td>@planet.Terrain</td>
+                    <td>@planet.Population</td>
+                </tr>
+            }
+        }
+        else
         {
             <tr>
-                <td>@planet.Name</td>
-                <td>@planet.Climate</td>
-                <td>@planet.Terrain</td>
-                <td>@planet.Population</td>
+                <td colspan="4">No data available</td>
             </tr>
         }
     </tbody>
