UPDATE: Style e .css ajustados

--- a/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
+++ b/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars Data Analyzer</title>
-    <link rel="stylesheet" href="~/css/styles.css"> <!-- Link para o seu CSS -->
+    <link rel="stylesheet" href="~/css/site.css"> <!-- Link para o seu CSS -->
 </head>
 <body>
     <header class="header">
