Adicionando botões funcionais

--- a/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
+++ b/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
@@ -11,10 +11,7 @@
 <body>
     <header class="header">
         <h1>Star Wars Data Analyzer</h1>
-        <nav>
-            <button id="showData" class="btn">Mostrar Dados Brutos</button>
-            <button id="showDashboard" class="btn">Mostrar Dashboard</button>
-        </nav>
+        <!-- Menu de Navegação removido -->
     </header>
 
     <main>
@@ -70,6 +67,12 @@
             </div>
         </section>
     </main>
+
+    <!-- Botões Fixos -->
+    <div class="fixed-buttons">
+        <button id="showData" class="btn">Mostrar Dados Brutos</button>
+        <button id="showDashboard" class="btn">Mostrar Dashboard</button>
+    </div>
 
     <script src="~/js/scripts.js"></script> 
 </body>
