--- a/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
+++ b/StarWarsDataAnalyzerWeb/Views/Home/Index.cshtml
@@ -7,6 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars Data Analyzer</title>
     <link rel="stylesheet" href="~/css/site.css"> <!-- Link para o seu CSS -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script> <!-- Incluindo Chart.js -->
+    <style>
+        .chart {
+            width: 400px;
+            height: 400px;
+            margin: 20px;
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <header class="header">
