--- a/StarWarsDataAnalyzerWeb/Views/Shared/_Layout.cshtml
+++ b/StarWarsDataAnalyzerWeb/Views/Shared/_Layout.cshtml
@@ -48,7 +48,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
-    <script src="~/js/chart.js" asp-append-version="true"></script>
+    <script src="~/js/chart.js" asp-append-version="true"></script> <!-- Certifique-se de que chart.js está carregado -->
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
